// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVGCards13 getFilename fancy 1`] = `
[
  "ace of clubs → /i/SVG-cards-1.3/ace_of_clubs.svg",
  "2 of clubs → /i/SVG-cards-1.3/2_of_clubs.svg",
  "3 of clubs → /i/SVG-cards-1.3/3_of_clubs.svg",
  "4 of clubs → /i/SVG-cards-1.3/4_of_clubs.svg",
  "5 of clubs → /i/SVG-cards-1.3/5_of_clubs.svg",
  "6 of clubs → /i/SVG-cards-1.3/6_of_clubs.svg",
  "7 of clubs → /i/SVG-cards-1.3/7_of_clubs.svg",
  "8 of clubs → /i/SVG-cards-1.3/8_of_clubs.svg",
  "9 of clubs → /i/SVG-cards-1.3/9_of_clubs.svg",
  "10 of clubs → /i/SVG-cards-1.3/10_of_clubs.svg",
  "jack of clubs → /i/SVG-cards-1.3/jack_of_clubs2.svg",
  "queen of clubs → /i/SVG-cards-1.3/queen_of_clubs2.svg",
  "king of clubs → /i/SVG-cards-1.3/king_of_clubs2.svg",
  "ace of diamonds → /i/SVG-cards-1.3/ace_of_diamonds.svg",
  "2 of diamonds → /i/SVG-cards-1.3/2_of_diamonds.svg",
  "3 of diamonds → /i/SVG-cards-1.3/3_of_diamonds.svg",
  "4 of diamonds → /i/SVG-cards-1.3/4_of_diamonds.svg",
  "5 of diamonds → /i/SVG-cards-1.3/5_of_diamonds.svg",
  "6 of diamonds → /i/SVG-cards-1.3/6_of_diamonds.svg",
  "7 of diamonds → /i/SVG-cards-1.3/7_of_diamonds.svg",
  "8 of diamonds → /i/SVG-cards-1.3/8_of_diamonds.svg",
  "9 of diamonds → /i/SVG-cards-1.3/9_of_diamonds.svg",
  "10 of diamonds → /i/SVG-cards-1.3/10_of_diamonds.svg",
  "jack of diamonds → /i/SVG-cards-1.3/jack_of_diamonds2.svg",
  "queen of diamonds → /i/SVG-cards-1.3/queen_of_diamonds2.svg",
  "king of diamonds → /i/SVG-cards-1.3/king_of_diamonds2.svg",
  "ace of hearts → /i/SVG-cards-1.3/ace_of_hearts.svg",
  "2 of hearts → /i/SVG-cards-1.3/2_of_hearts.svg",
  "3 of hearts → /i/SVG-cards-1.3/3_of_hearts.svg",
  "4 of hearts → /i/SVG-cards-1.3/4_of_hearts.svg",
  "5 of hearts → /i/SVG-cards-1.3/5_of_hearts.svg",
  "6 of hearts → /i/SVG-cards-1.3/6_of_hearts.svg",
  "7 of hearts → /i/SVG-cards-1.3/7_of_hearts.svg",
  "8 of hearts → /i/SVG-cards-1.3/8_of_hearts.svg",
  "9 of hearts → /i/SVG-cards-1.3/9_of_hearts.svg",
  "10 of hearts → /i/SVG-cards-1.3/10_of_hearts.svg",
  "jack of hearts → /i/SVG-cards-1.3/jack_of_hearts2.svg",
  "queen of hearts → /i/SVG-cards-1.3/queen_of_hearts2.svg",
  "king of hearts → /i/SVG-cards-1.3/king_of_hearts2.svg",
  "ace of spades → /i/SVG-cards-1.3/ace_of_spades.svg",
  "2 of spades → /i/SVG-cards-1.3/2_of_spades.svg",
  "3 of spades → /i/SVG-cards-1.3/3_of_spades.svg",
  "4 of spades → /i/SVG-cards-1.3/4_of_spades.svg",
  "5 of spades → /i/SVG-cards-1.3/5_of_spades.svg",
  "6 of spades → /i/SVG-cards-1.3/6_of_spades.svg",
  "7 of spades → /i/SVG-cards-1.3/7_of_spades.svg",
  "8 of spades → /i/SVG-cards-1.3/8_of_spades.svg",
  "9 of spades → /i/SVG-cards-1.3/9_of_spades.svg",
  "10 of spades → /i/SVG-cards-1.3/10_of_spades.svg",
  "jack of spades → /i/SVG-cards-1.3/jack_of_spades2.svg",
  "queen of spades → /i/SVG-cards-1.3/queen_of_spades2.svg",
  "king of spades → /i/SVG-cards-1.3/king_of_spades2.svg",
  "joker of clubs → /i/SVG-cards-1.3/black_joker.svg",
  "joker of diamonds → /i/SVG-cards-1.3/red_joker.svg",
  "joker of hearts → /i/SVG-cards-1.3/red_joker.svg",
  "joker of spades → /i/SVG-cards-1.3/black_joker.svg",
]
`;

exports[`SVGCards13 getFilename simple 1`] = `
[
  "ace of clubs → /i/SVG-cards-1.3/ace_of_clubs.svg",
  "2 of clubs → /i/SVG-cards-1.3/2_of_clubs.svg",
  "3 of clubs → /i/SVG-cards-1.3/3_of_clubs.svg",
  "4 of clubs → /i/SVG-cards-1.3/4_of_clubs.svg",
  "5 of clubs → /i/SVG-cards-1.3/5_of_clubs.svg",
  "6 of clubs → /i/SVG-cards-1.3/6_of_clubs.svg",
  "7 of clubs → /i/SVG-cards-1.3/7_of_clubs.svg",
  "8 of clubs → /i/SVG-cards-1.3/8_of_clubs.svg",
  "9 of clubs → /i/SVG-cards-1.3/9_of_clubs.svg",
  "10 of clubs → /i/SVG-cards-1.3/10_of_clubs.svg",
  "jack of clubs → /i/SVG-cards-1.3/jack_of_clubs.svg",
  "queen of clubs → /i/SVG-cards-1.3/queen_of_clubs.svg",
  "king of clubs → /i/SVG-cards-1.3/king_of_clubs.svg",
  "ace of diamonds → /i/SVG-cards-1.3/ace_of_diamonds.svg",
  "2 of diamonds → /i/SVG-cards-1.3/2_of_diamonds.svg",
  "3 of diamonds → /i/SVG-cards-1.3/3_of_diamonds.svg",
  "4 of diamonds → /i/SVG-cards-1.3/4_of_diamonds.svg",
  "5 of diamonds → /i/SVG-cards-1.3/5_of_diamonds.svg",
  "6 of diamonds → /i/SVG-cards-1.3/6_of_diamonds.svg",
  "7 of diamonds → /i/SVG-cards-1.3/7_of_diamonds.svg",
  "8 of diamonds → /i/SVG-cards-1.3/8_of_diamonds.svg",
  "9 of diamonds → /i/SVG-cards-1.3/9_of_diamonds.svg",
  "10 of diamonds → /i/SVG-cards-1.3/10_of_diamonds.svg",
  "jack of diamonds → /i/SVG-cards-1.3/jack_of_diamonds.svg",
  "queen of diamonds → /i/SVG-cards-1.3/queen_of_diamonds.svg",
  "king of diamonds → /i/SVG-cards-1.3/king_of_diamonds.svg",
  "ace of hearts → /i/SVG-cards-1.3/ace_of_hearts.svg",
  "2 of hearts → /i/SVG-cards-1.3/2_of_hearts.svg",
  "3 of hearts → /i/SVG-cards-1.3/3_of_hearts.svg",
  "4 of hearts → /i/SVG-cards-1.3/4_of_hearts.svg",
  "5 of hearts → /i/SVG-cards-1.3/5_of_hearts.svg",
  "6 of hearts → /i/SVG-cards-1.3/6_of_hearts.svg",
  "7 of hearts → /i/SVG-cards-1.3/7_of_hearts.svg",
  "8 of hearts → /i/SVG-cards-1.3/8_of_hearts.svg",
  "9 of hearts → /i/SVG-cards-1.3/9_of_hearts.svg",
  "10 of hearts → /i/SVG-cards-1.3/10_of_hearts.svg",
  "jack of hearts → /i/SVG-cards-1.3/jack_of_hearts.svg",
  "queen of hearts → /i/SVG-cards-1.3/queen_of_hearts.svg",
  "king of hearts → /i/SVG-cards-1.3/king_of_hearts.svg",
  "ace of spades → /i/SVG-cards-1.3/ace_of_spades2.svg",
  "2 of spades → /i/SVG-cards-1.3/2_of_spades.svg",
  "3 of spades → /i/SVG-cards-1.3/3_of_spades.svg",
  "4 of spades → /i/SVG-cards-1.3/4_of_spades.svg",
  "5 of spades → /i/SVG-cards-1.3/5_of_spades.svg",
  "6 of spades → /i/SVG-cards-1.3/6_of_spades.svg",
  "7 of spades → /i/SVG-cards-1.3/7_of_spades.svg",
  "8 of spades → /i/SVG-cards-1.3/8_of_spades.svg",
  "9 of spades → /i/SVG-cards-1.3/9_of_spades.svg",
  "10 of spades → /i/SVG-cards-1.3/10_of_spades.svg",
  "jack of spades → /i/SVG-cards-1.3/jack_of_spades.svg",
  "queen of spades → /i/SVG-cards-1.3/queen_of_spades.svg",
  "king of spades → /i/SVG-cards-1.3/king_of_spades.svg",
  "joker of clubs → /i/SVG-cards-1.3/black_joker.svg",
  "joker of diamonds → /i/SVG-cards-1.3/red_joker.svg",
  "joker of hearts → /i/SVG-cards-1.3/red_joker.svg",
  "joker of spades → /i/SVG-cards-1.3/black_joker.svg",
]
`;
